# ml-from-scratch

./: README.md  pyproject.toml
src/mlfs/: __init__.py
src/mlfs/regression/: __init__.py  gd_linear_regression.py
