[project]
name = "ml-from-scratch"
# version = "0.1.0"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aarsh Pandey", email = "27226348+aarsh-pandey@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "vcs"  

[tool.hatch.build.targets.wheel]
packages = ["src/mlfs"]
